--- a/bootstrap-5.3.2-dist/style.css
+++ b/bootstrap-5.3.2-dist/style.css
@@ -1,34 +1,34 @@
-body {
-    font-family: 'Yusei Magic' , sans-serif;
-    background-image: url("background.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
+        body {
+            font-family: 'Yusei Magic' , sans-serif;
+            background-image: url("https://images2.alphacoders.com/122/1229217.png");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+        }
 
-.center {
-    text-align: center;
-    font-size: large;
-    vertical-align: middle;
-}
+        .center {
+            text-align: center;
+            font-size: large;
+            vertical-align: middle;
+        }
 
-.title {
-    font-size: 50px !important;
-    font-weight: lighter;
-    text-decoration: underline;
-}
+        .title {
+            font-size: 50px !important;
+            font-weight: lighter;
+            text-decoration: underline;
+        }
 
-.bold {
-    font-size: 30px;
-    font-weight: bold;
-}
+        .bold {
+            font-size: 30px;
+            font-weight: bold;
+        }
 
-.footer {
-    font-size: 15px;
-    font-weight: light;
-}
+        .footer {
+            font-size: 15px;
+            font-weight: light;
+        }
 
-.container {
-    position: relative;
-    width: 80%;
-}
+        .container {
+            position: relative;
+            width: 80%;
+        }
